--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1 {
   box-shadow: 8px 8px 10px hsla(0, 0%, 0%, 0.5);
 }
 
-.choiceDisplayContainer {
+#choiceDisplayContainer {
   margin-bottom: 30px;
 }
 
