--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   height: 100vh;
   text-align: center;
-  font-family: Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: hsl(0, 0%, 95%);
   display: flex;
   align-items: center;
@@ -15,7 +15,7 @@ h1 {
   font-size: 5rem;
   margin-bottom: 30px;
   color: hsl(0, 0%, 15%);
-  text-shadow: 3px 3px 5px hsl(0, 0%, 50%);
+  text-shadow: 3px 3px 3px hsl(0, 0%, 50%);
 }
 
 .choicesContainer {
