--- a/style.css
+++ b/style.css
@@ -18,72 +18,71 @@ h1 {
   text-shadow: 3px 3px 3px hsl(0, 0%, 50%);
 }
 
-.choicesContainer {
-  margin-bottom: 30px;
-}
-
-.choicesContainer button {
+button {
   margin: 15px;
   padding: 15px;
   color: white;
   cursor: pointer;
   font-size: 2rem;
   min-width: 250px;
+  font-weight: 600;
   border-radius: 5px;
   transition: 0.3s ease;
-  border: 2px solid hsl(0, 0%, 25%);
+  border: 2px solid hsl(0, 0%, 20%);
   background-color: hsl(200, 100%, 50%);
-  box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.5);
+  box-shadow: 5px 5px 3px hsla(0, 0%, 0%, 0.5);
 }
 
-.choicesContainer button:hover {
+button:hover {
   min-width: 280px;
   background-color: hsl(200, 100%, 60%);
-  box-shadow: 8px 8px 10px hsla(0, 0%, 0%, 0.5);
+  box-shadow: 8px 8px 8px hsla(0, 0%, 0%, 0.5);
 }
 
 #choiceDisplayContainer {
-  margin-bottom: 30px;
+  margin: 30px;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
-#playerDisplay,
-#computerDisplay {
-  font-size: 2rem;
+#playerDisplay {
+  margin-bottom: 10px;
 }
 
 #resultDisplay {
   font-size: 3rem;
   margin-top: 30px;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 #scoreDisplayContainer {
-  margin-bottom: 30px;
+  font-size: 2rem;
+  font-weight: 700;
 }
 
-#scoreDisplay {
-  font-size: 2rem;
+#scoreDisplayContainer > div:has(#playerScoreDisplay) {
+  margin-bottom: 10px;
 }
 
 .greenText,
 #playerScoreDisplay {
-  font-weight: bold;
   color: hsl(120, 100%, 45%);
 }
 
 .redText,
 #computerScoreDisplay {
-  font-weight: bold;
   color: rgb(240, 0, 0);
 }
 
 #restartBtn {
-  padding: 15px;
   cursor: pointer;
   min-width: 160px;
+  margin-top: 30px;
+  font-weight: 500;
   font-size: 1.5rem;
   border-radius: 5px;
   transition: 0.5s ease;
+  color: hsl(0, 0%, 15%);
   background-color: white;
   border: 2px solid hsl(0, 0%, 25%);
   box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.5);
@@ -91,6 +90,7 @@ h1 {
 
 #restartBtn:hover {
   min-width: 180px;
+  background-color: hsl(0, 0%, 95%);
   box-shadow: 8px 8px 10px hsla(0, 0%, 0%, 0.5);
 }
 
