cleaned up JS by removing onclick handlers and established better seperation of concerns

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,17 @@
 :root {
-  --blue: hsl(200, 100%, 50%);
-  --blue-light: hsl(200, 100%, 60%);
-  --green: hsl(120, 100%, 45%);
   --red: rgb(240, 0, 0);
   --dark: hsl(0, 0%, 15%);
   --gray: hsl(0, 0%, 95%);
-  --font-main: "Montserrat", sans-serif;
+  --blue: hsl(200, 100%, 50%);
+  --green: hsl(120, 100%, 45%);
+  --light-blue: hsl(200, 100%, 60%);
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 body {
@@ -20,8 +19,8 @@ body {
   min-height: 100vh;
   color: var(--dark);
   text-align: center;
-  font-family: var(--font-main);
   background-color: var(--gray);
+  font-family: "Montserrat", sans-serif;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -65,7 +64,7 @@ button {
 
 button:hover {
   transform: scale(1.05);
-  background-color: var(--blue-light);
+  background-color: var(--light-blue);
   box-shadow: 8px 8px 8px hsla(0, 0%, 0%, 0.5);
 }
 
