--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,18 +11,19 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  border: 1px solid red;
 }
 
 body {
   padding: 2rem;
   min-height: 100vh;
-  color: var(--dark);
+  color: hsl(0, 0%, 15%);
   text-align: center;
-  background-color: var(--gray);
+  background-color: hsl(0, 0%, 95%);
   font-family: "Montserrat", sans-serif;
   display: flex;
   align-items: center;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
 }
 
@@ -33,21 +34,21 @@ main {
 
 h1 {
   margin-bottom: 2rem;
-  font-size: clamp(3.5rem, 5vw, 5rem);
+  font-size: clamp(3rem, 5vw, 5rem);
   text-shadow: 3px 3px 3px hsl(0, 0%, 50%);
 }
 
 .choicesContainer {
-  gap: 1rem;
+  /* gap: 1rem; */
   margin-bottom: 2rem;
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 
 button {
-  margin: 15px;
+  margin: 1rem;
   padding: 1rem;
   color: white;
   cursor: pointer;
@@ -56,62 +57,79 @@ button {
   font-size: 1.75rem;
   border-radius: 5px;
   transition: all 0.3s ease;
-  border: 2px solid var(--dark);
-  background-color: var(--blue);
-  box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
+  border: 1px solid black;
+  background-color: hsl(200, 100%, 50%);
+  box-shadow: 5px 5px 3px hsla(0, 0%, 0%, 0.5);
 }
 
 button:hover {
   transform: scale(1.05);
-  background-color: var(--light-blue);
+  background-color: hsl(200, 100%, 60%);
   box-shadow: 8px 8px 8px hsla(0, 0%, 0%, 0.5);
 }
 
-#choiceDisplayContainer,
+#displayContainer {
+  padding: 1rem;
+  width: 60%;
+  margin: 0 auto;
+  /* min-width: 80%; */
+  border: 1px solid black;
+  border-radius: 8px;
+  background-color: hsl(0, 0%, 90%);
+}
+
+/* #choiceDisplayContainer,
 #scoreDisplayContainer {
   font-weight: 600;
-  margin-top: 1.5rem;
+  font-size: clamp(1.25rem, 2vw, 2rem);
+} */
+
+#displayContainer {
+  font-weight: 600;
   font-size: clamp(1.25rem, 2vw, 2rem);
 }
 
-#playerDisplay {
-  margin-bottom: 0.5rem;
+#playerDisplay,
+#computerDisplay,
+#resultDisplay {
+  padding: 0.5rem;
 }
 
 #resultDisplay {
-  margin-top: 1rem;
   font-weight: 900;
   font-size: clamp(2rem, 4vw, 3rem);
 }
 
 .greenText,
 #playerScoreDisplay {
-  color: var(--green);
+  font-weight: 700;
+  color: hsl(120, 100%, 45%);
 }
 
 .redText,
 #computerScoreDisplay {
-  color: var(--red);
+  font-weight: 700;
+  color: hsl(0, 100%, 50%);
 }
 
 #restartBtn {
   cursor: pointer;
   min-width: 160px;
-  margin-top: 2rem;
+  /* margin: 2rem; */
   font-weight: 500;
   font-size: 1.5rem;
   border-radius: 5px;
   transition: 0.5s ease;
-  color: var(--dark);
+  color: hsl(0, 0%, 15%);
   background-color: white;
-  border: 2px solid hsl(0, 0%, 25%);
-  box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.5);
+  border: 1px solid black;
+  box-shadow: 5px 5px 3px hsla(0, 0%, 0%, 0.5);
 }
 
 #restartBtn:hover {
   transform: scale(1.05);
-  background-color: var(--gray);
-  box-shadow: 8px 8px 10px hsla(0, 0%, 0%, 0.5);
+  /* background-color: var(--gray); */
+  box-shadow: 8px 8px 8px hsla(0, 0%, 0%, 0.5);
 }
 
 .hidden {
@@ -120,7 +138,7 @@ button:hover {
 
 @media (max-width: 480px) {
   button {
-    min-width: 90%;
+    min-width: 80%;
     font-size: 1.5rem;
   }
 
