--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 body {
@@ -115,7 +115,7 @@ button:hover {
 #restartBtn {
   cursor: pointer;
   min-width: 160px;
-  /* margin: 2rem; */
+  margin: 2rem;
   font-weight: 500;
   font-size: 1.5rem;
   border-radius: 5px;
@@ -128,7 +128,7 @@ button:hover {
 
 #restartBtn:hover {
   transform: scale(1.05);
-  /* background-color: var(--gray); */
+  background-color: hsl(0, 0%, 90%);
   box-shadow: 8px 8px 8px hsla(0, 0%, 0%, 0.5);
 }
 
